Fix: newsletter form now responsive on smaller screens

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,7 +1,7 @@
 .hero-section{
     width: 100%;
     height: calc(100vh - 120px);
-    background: url('https://images-prod.dazeddigital.com/870/azure/dazed-prod/1250/2/1252255.jpg') no-repeat center center fixed;
+    background: url('/media/background.jpeg') no-repeat center center fixed;
     background-size: cover;
     display: flex;
     justify-content: center;
@@ -66,7 +66,6 @@
 }
 
 
-
 /* Other */
 
 #front-image {
@@ -102,6 +101,25 @@
     border-radius: 3px;
     margin-bottom: 20px;
   }
+
+/* Media Queries */
+
+@media screen and (max-width: 490px) {
+
+    .blog-preview {
+        font-size: 50%;
+    }
+
+    .blog-preview-btn {
+        font-size: 75%;
+    }
+
+    .subscribe {
+        size-adjust: 50%;
+    }
+}
+    
+
 
 /* All code below is from Boutique Ado */
 
